welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,value:Int): Int = {
	var tab:Array[Int]=nums
	var lookingFor:Int =value
	
	for (i <- tab) {


		if (nums(i)== lookingFor){return i}
		else{return -1}
	}
}
